# blaze

./: .gitignore  CMakeLists.txt  README.md
examples/: test.bz
include/Diagnostics/: Diagnostic.hpp  DiagnosticBuilder.hpp  DiagnosticEngine.hpp  DiagnosticID.hpp  IDiagnosticEngine.hpp
include/Lexer/: Lexer.hpp  Token.hpp
include/SourceManager/: ISourceManager.hpp  SourceManager.hpp
include/Utils/: Utf8.hpp
src/: main.cpp
src/Diagnostics/: DiagnosticBuilder.cpp  DiagnosticEngine.cpp
src/Lexer/: Lexer.cpp  Token.cpp
src/SourceManager/: SourceManager.cpp
tests/: CMakeLists.txt
tests/Diagnostics/: MockDiagnosticEngine.hpp
tests/Lexer/: LexCharLiteralTest.cpp  LexerBaseTest.cc  LexerBaseTest.hpp  LexerCommentTest.cpp  LexerIdentifierTest.cpp  LexerKeywordTest.cpp  LexerNumberLiteralTest.cpp  LexerStringLiteralTest.cpp  LexerSymbolTest.cpp
tests/SourceManager/: MockSourceManager.hpp
tests/lexer/: LexerSymbols.cpp
